Degraded texture shading on dense meshes #61024

Closed
opened 2019-01-30 15:57:55 +01:00 by Tsvetelin Lyubenov · 7 comments

System Information
Operating system: Windows 10 Enterprise, 64bit
Graphics card: Nvidia GeForce GTX 970

Blender Version
Broken: 2.80 beta, hash: a1ae04d15a, date:2019-01-29 22:41
Worked: 2.79b (official), hash: f4dc9f9d68, date:2018-03-22 14:10

Short description of error
Texture shading degrades (not smooth) on high dense meshes. Used a wave texture in the example, but the problem is present also using high resolution image textures (I used zebra reflection map). Present in Eevee LookDev and Rendered, and also in Solid mode using high resolution matcap.
{F6454243}zebraHighDenseMesh2.79b.png

Exact steps for others to reproduce the error
Use this file (from the screenshots) and open it with 2.79b and 2.8beta to compare : HighResMesh.blend or..
In an empty file add a monkey, turn on smooth shading, subdivide it smooth 6-10 times or use Subdivision modifier(6 subdivisions are enough). Add a reflection mapped wave texture and thats it.
In 2.79b the more subdivisions are added the more smooth appears the texture. Used Material display mode so the texture gets visible in the viewport.
In 2.8 beta there is noticeable distortion of the smoothness even with very high subdivision levels.
It's more noticeable with reflection and normal mapping, but present in other mapping modes also.
The problem is not present in Cycles. Only with matcaps and Eevee display modes.

**System Information** Operating system: Windows 10 Enterprise, 64bit Graphics card: Nvidia GeForce GTX 970 **Blender Version** Broken: 2.80 beta, hash: a1ae04d15a9f, date:2019-01-29 22:41 Worked: 2.79b (official), hash: f4dc9f9d68b, date:2018-03-22 14:10 **Short description of error** Texture shading degrades (not smooth) on high dense meshes. Used a wave texture in the example, but the problem is present also using high resolution image textures (I used zebra reflection map). Present in Eevee LookDev and Rendered, and also in Solid mode using high resolution matcap. {[F6454243](https://archive.blender.org/developer/F6454243/zebraHighDenseMesh2.80beta.png)}![zebraHighDenseMesh2.79b.png](https://archive.blender.org/developer/F6454246/zebraHighDenseMesh2.79b.png) **Exact steps for others to reproduce the error** Use this file (from the screenshots) and open it with 2.79b and 2.8beta to compare : [HighResMesh.blend](https://archive.blender.org/developer/F6454326/HighResMesh.blend) or.. In an empty file add a monkey, turn on smooth shading, subdivide it smooth 6-10 times or use Subdivision modifier(6 subdivisions are enough). Add a reflection mapped wave texture and thats it. In 2.79b the more subdivisions are added the more smooth appears the texture. Used Material display mode so the texture gets visible in the viewport. In 2.8 beta there is noticeable distortion of the smoothness even with very high subdivision levels. It's more noticeable with reflection and normal mapping, but present in other mapping modes also. The problem is not present in Cycles. Only with matcaps and Eevee display modes.

Added subscriber: @rendetto

Added subscriber: @rendetto
Clément Foucault was assigned by Jacques Lucke 2019-01-30 16:50:51 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

I think this is because we use encoded 10bits normal vectors for performance and VRAM usage.

Maybe we need to add a highquality normal/tangent option somewhere.

@brecht any thoughts?

I think this is because we use encoded 10bits normal vectors for performance and VRAM usage. Maybe we need to add a highquality normal/tangent option somewhere. @brecht any thoughts?

If it's indeed the 10bit normals, I guess there is not much that can be done besides adding an option for higher quality normals (16bit?).

I wouldn't know how to avoid such artifacts otherwise.

If it's indeed the 10bit normals, I guess there is not much that can be done besides adding an option for higher quality normals (16bit?). I wouldn't know how to avoid such artifacts otherwise.
Clément Foucault was unassigned by Dalai Felinto 2019-12-23 16:35:16 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by e82827bf6e

This issue was referenced by e82827bf6ed54a1d1552ac9176df9e309b4d29e2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-02-19 01:59:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61024
No description provided.